@@ -413,6 +413,7 @@ block|}
 argument_list|)
 expr_stmt|;
 block|}
+comment|/**    * Test user dictionary    */
 DECL|method|testUserDict
 specifier|public
 name|void
@@ -518,6 +519,167 @@ block|,
 literal|"è¡ã£"
 block|,
 literal|"ã"
+block|}
+argument_list|)
+expr_stmt|;
+block|}
+comment|/**    * Test preserving punctuation    */
+DECL|method|testPreservePunctuation
+specifier|public
+name|void
+name|testPreservePunctuation
+parameter_list|()
+throws|throws
+name|IOException
+block|{
+name|JapaneseTokenizerFactory
+name|factory
+init|=
+operator|new
+name|JapaneseTokenizerFactory
+argument_list|()
+decl_stmt|;
+name|Map
+argument_list|<
+name|String
+argument_list|,
+name|String
+argument_list|>
+name|args
+init|=
+operator|new
+name|HashMap
+argument_list|<
+name|String
+argument_list|,
+name|String
+argument_list|>
+argument_list|()
+decl_stmt|;
+name|args
+operator|.
+name|put
+argument_list|(
+literal|"discardPunctuation"
+argument_list|,
+literal|"false"
+argument_list|)
+expr_stmt|;
+name|factory
+operator|.
+name|init
+argument_list|(
+name|args
+argument_list|)
+expr_stmt|;
+name|factory
+operator|.
+name|inform
+argument_list|(
+operator|new
+name|SolrResourceLoader
+argument_list|(
+literal|null
+argument_list|,
+literal|null
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|TokenStream
+name|ts
+init|=
+name|factory
+operator|.
+name|create
+argument_list|(
+operator|new
+name|StringReader
+argument_list|(
+literal|"ä»ãã«ã¦ã§ã¼ã«ãã¾ãããæ¥é±ã®é ­æ¥æ¬ã«æ»ãã¾ããæ¥½ãã¿ã«ãã¦ãã¾ãï¼ãå¯¿å¸ãé£ã¹ãããªããã"
+argument_list|)
+argument_list|)
+decl_stmt|;
+name|System
+operator|.
+name|out
+operator|.
+name|println
+argument_list|(
+name|ts
+operator|.
+name|toString
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|assertTokenStreamContents
+argument_list|(
+name|ts
+argument_list|,
+operator|new
+name|String
+index|[]
+block|{
+literal|"ä»"
+block|,
+literal|"ãã«ã¦ã§ã¼"
+block|,
+literal|"ã«"
+block|,
+literal|"ã"
+block|,
+literal|"ã¾ã"
+block|,
+literal|"ã"
+block|,
+literal|"ã"
+block|,
+literal|"æ¥é±"
+block|,
+literal|"ã®"
+block|,
+literal|"é ­"
+block|,
+literal|"æ¥æ¬"
+block|,
+literal|"ã«"
+block|,
+literal|"æ»ã"
+block|,
+literal|"ã¾ã"
+block|,
+literal|"ã"
+block|,
+literal|"æ¥½ãã¿"
+block|,
+literal|"ã«"
+block|,
+literal|"ã"
+block|,
+literal|"ã¦"
+block|,
+literal|"ã"
+block|,
+literal|"ã¾ã"
+block|,
+literal|"ï¼"
+block|,
+literal|"ã"
+block|,
+literal|"å¯¿å¸"
+block|,
+literal|"ã"
+block|,
+literal|"é£ã¹"
+block|,
+literal|"ãã"
+block|,
+literal|"ãª"
+block|,
+literal|"ã"
+block|,
+literal|"ã"
+block|,
+literal|"ã"
 block|}
 argument_list|)
 expr_stmt|;
